--- a/templates/channel.html
+++ b/templates/channel.html
@@ -27,10 +27,7 @@
                 <h1 class="title">
                     <a href="{% url 'index' %}"><img src="{% static 'images/logo-short.png' %}" alt="Slam eNotes" height="38" /></a>
                 </h1>
-                <label>Search note</label>
-                    <div class="divsearch">
-                <input id="note-search" type="text" />
-                    </div>
+                <input id="note-search" type="text" placeholder="search notes" />
             </header>
         </div>
 
