--- a/templates/channel.html
+++ b/templates/channel.html
@@ -90,7 +90,7 @@
             <span id="update-indicator">Notes changed. <a href="#">Update</a></span>
             <div id="invis-edit-form" class="visuallyhidden">
                 {% if user.is_authenticated %}
-                <form id="note-edit-form" method="post" action="{% url 'ajax' %}?action=edit">
+                <form id="note-edit-form" method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <p>
