live update of edits now works, fixed a bug with event handlers being reapplied, causing severe lag after a few updates were performed

--- a/templates/channel.html
+++ b/templates/channel.html
@@ -128,7 +128,7 @@
             $("#collapse-menu").click(function() {$(document.body).toggleClass('menu-closed');});
             $("#expand-menu").click(function() {$(document.body).toggleClass('menu-closed');});
 
-            ajax_url = "{% url 'ajax' %}";
+            var ajax_url = "{% url 'ajax' %}";
 
             var notes_changes = new Object();
             var last_update = new Date();
