--- a/templates/index.html
+++ b/templates/index.html
@@ -89,14 +89,14 @@
         <section id="information" class="wrapper">
             <div class="inner split">
                 <section>
-                    <h2>Planned Features:</h2>
+                    <h2>Planned features:</h2>
                     <ul class="checklist">
                         <li>Create User Accounts</li>
                         <li>Upload text notes</li>
                         <li>Search for notes</li>
+                        <li>Edit text notes</li>
                     </ul>
                     <ul>
-                        <li>Edit text notes</li>
                         <li>Upload handwritten notes</li>
                         <li>Sort notes by class session</li>
                         <li>Create new channels</li>
