--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,6 +21,11 @@
 
 	body {
 		line-height: 1;
+        -webkit-transition: background-color 1s, color 1s;
+        -moz-transition: background-color 1s, color 1s;
+        -ms-transition: background-color 1s, color 1s;
+        -o-transition: background-color 1s, color 1s;
+        transition: background-color 1s, color 1s;
 	}
 
 	ol, ul {
@@ -1502,6 +1507,12 @@
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 1em 0;
+
+        -webkit-transition: color 1s;
+        -moz-transition: color 1s;
+        -ms-transition: color 1s;
+        -o-transition: color 1s;
+        transition: color 1s;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -2272,6 +2283,12 @@
 				ul.contact li a {
 					color: inherit;
 					text-decoration: none;
+
+                    -webkit-transition: color 1s;
+                    -moz-transition: color 1s;
+                    -ms-transition: color 1s;
+                    -o-transition: color 1s;
+                    transition: color 1s;
 				}
 
 		ul.actions {
@@ -2405,6 +2422,12 @@
 
 	ul.contact li:before {
 		color: black;
+
+        -webkit-transition: color 1s;
+        -moz-transition: color 1s;
+        -ms-transition: color 1s;
+        -o-transition: color 1s;
+        transition: color 1s;
 	}
 
 /* Section/Article */
@@ -2419,6 +2442,12 @@
 
     section#registration .logged-in a.button {
         float: right;
+
+        -webkit-transition: background-color 1s, color 1s;
+        -moz-transition: background-color 1s, color 1s;
+        -ms-transition: background-color 1s, color 1s;
+        -o-transition: background-color 1s, color 1s;
+        transition: background-color 1s, color 1s;
     }
 
     @media screen and (max-width: 480px) {
@@ -2614,6 +2643,12 @@
 
 	.split > :nth-child(even) {
 		border-left-color: rgba(144, 144, 144, 0.25);
+
+        -webkit-transition: border-left-color 1s;
+        -moz-transition: border-left-color 1s;
+        -ms-transition: border-left-color 1s;
+        -o-transition: border-left-color 1s;
+        transition: border-left-color 1s;
 	}
 
 /* Spotlight */
@@ -3331,6 +3366,12 @@
 		background-color: #fafafa;
 		border-top: solid 2px rgba(144, 144, 144, 0.25);
 		color: #777;
+
+        -webkit-transition: background-color 1s, border-top-color 1s;
+        -moz-transition: background-color 1s, border-top-color 1s;
+        -ms-transition: background-color 1s, border-top-color 1s;
+        -o-transition: background-color 1s, border-top-color 1s;
+        transition: background-color 1s, border-top-color 1s;
 	}
 
 		#footer .copyright {
@@ -3338,6 +3379,12 @@
 			font-size: 0.9em;
 			padding: 4em 2em;
 			text-align: center;
+
+            -webkit-transition: color 1s;
+            -moz-transition: color 1s;
+            -ms-transition: color 1s;
+            -o-transition: color 1s;
+            transition: color 1s;
 		}
 
 			#footer .copyright li {
@@ -3385,3 +3432,117 @@
 			}
 
 		}
+
+/* Dark theme/night mode */
+
+#theme-selection + label {
+    float: left;
+    position: relative;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    -webkit-transition: color 1s;
+    -moz-transition: color 1s;
+    -ms-transition: color 1s;
+    -o-transition: color 1s;
+    transition: color 1s;
+}
+
+body.dark #theme-selection + label {
+    color: #DDD;
+}
+
+#theme-selection + label::before {
+    display: none;
+}
+
+#theme-selection + label #theme-indicator-light {
+    color: #f5dd5d;
+}
+
+#theme-selection + label #theme-indicator-dark {
+    color: #5dddf5;
+}
+
+#theme-selection + label #theme-indicator-dark,
+#theme-selection + label #theme-indicator-light {
+    position: absolute;
+    left: 1rem;
+}
+
+#theme-selection + label #theme-indicator-dark, #theme-selection:checked + label #theme-indicator-light {
+    max-height: 0;
+    opacity: 0.0;
+    top: 1rem;
+    overflow: hidden;
+
+    -webkit-transition: color 0.2s, opacity 0.2s, top 0.2s, max-height 0.2s step-end;
+    -moz-transition: color 0.2s, opacity 0.2s, top 0.2s, max-height 0.2s step-end;
+    -ms-transition: color 0.2s, opacity 0.2s, top 0.2s, max-height 0.2s step-end;
+    -o-transition: color 0.2s, opacity 0.2s, top 0.2s, max-height 0.2s step-end;
+    transition: color 0.2s, opacity 0.2s, top 0.2s, max-height 0.2s step-end;
+}
+#theme-selection:checked + label #theme-indicator-dark, #theme-selection + label #theme-indicator-light {
+    max-height: 2em; /* FIXME: kinda hacky, probably better to do with jQuery */
+    opacity: 1.0;
+    top: 0.5rem;
+
+    /* if cool sliding effect is wanted, mess with padding's transition time and remove padding's step-ends */
+    -webkit-transition: color 0.2s, opacity 0.2s, top 0.5s 0s, max-height 1ms 0s step-end;
+    -moz-transition: color 0.2s, opacity 0.2s, top 0.5s 0s, max-height 1ms 0s step-end;
+    -ms-transition: color 0.2s, opacity 0.2s, top 0.5s 0s, max-height 1ms 0s step-end;
+    -o-transition: color 0.2s, opacity 0.2s, top 0.5s 0s, max-height 1ms 0s step-end;
+    transition: color 0.2s, opacity 0.2s, top 0.5s 0s, max-height 1ms 0s step-end;
+}
+
+#theme-selection + label::after {
+    content: ': Sol';
+}
+
+#theme-selection:checked + label::after {
+    content: ': Luna';
+}
+
+body.dark {
+  background-color: #222;
+  color: #DDD;
+}
+
+body.dark h1, body.dark h2, body.dark h3, body.dark h4, body.dark h5, body.dark h6 {
+  color: #DDD;
+}
+
+body.dark #banner {
+	background-image: url("../images/overlay.png"), -moz-linear-gradient(45deg, #19355C 0%, #3A7183 100%);
+	background-image: url("../images/overlay.png"), -webkit-linear-gradient(45deg, #19355C 0%, #3A7183 100%);
+  	background-image: url("../images/overlay.png"), -ms-linear-gradient(45deg, #19355C 0%, #3A7183 100%);
+  	background-image: url("../images/overlay.png"), linear-gradient(45deg, #19355C 0%, #3A7183 100%);
+}
+
+body.dark #banner h2 {
+	color: #EEE;
+}
+
+body.dark ul.contact li::before {
+	color: #DDD;
+}
+
+body.dark .split > :nth-child(even) {
+  border-left-color: #666;
+}
+
+body.dark section#registration .logged-in a.button {
+  background-color: #444;
+  color: #DDD !important;
+}
+
+body.dark #footer .copyright {
+  	color: #888;
+}
+
+body.dark #footer {
+  	background-color: #333;
+  	border-top-color: #666;
+}
