--- a/static/css/channel.css
+++ b/static/css/channel.css
@@ -44,6 +44,19 @@ textarea {
     resize: vertical;
 }
 
+a, a:link, a:visited {
+    color: blue;
+    text-decoration: none;
+}
+
+a:hover, a:active {
+    text-decoration: underline;
+}
+
+a:active {
+    color: red;
+}
+
 .browserupgrade {
     margin: 0.2em 0;
     background: #ccc;
@@ -184,6 +197,7 @@ body.full-height {
 }
 
 .full-height .header-container #note-search {
+    border: 0.1rem solid #CCC;
 	float: right;
 	margin-top: 0.8rem;
 }
@@ -357,8 +371,23 @@ body.full-height {
 .deleting .note-actions a.note-delete {
     display: none;
 }
-.deleting .note-actions a.note-edit-cancel {
-    display: inline;
+
+#note-delete-prompt {
+    text-align: center;
+}
+
+#note-delete-proceed, #note-delete-cancel {
+    border: none;
+    padding: 6px 12px;
+    margin: 1rem;
+    background-color: #f7ecbe;
+    color: #333;
+    text-decoration: none;
+}
+
+#note-delete-proceed {
+    background-color: #e65050;
+    color: white;
 }
 
 .full-height > .footer-container {
@@ -378,6 +407,12 @@ body.full-height {
 
 #note-form {
     text-align: right;
+}
+
+#invis-edit-form {
+    position: absolute;
+    top: -10000px;
+    left: -10000px;
 }
 
 #note-edit-form {
@@ -728,23 +763,34 @@ body.dark {
   background-color: #222;
   color: #DDD;
 }
+
 body.dark .header-container {
   background-color: #333;
   border-bottom-color: #222;
   box-shadow: 0 1px 2px rgba(20, 20, 20, 0.70);
 }
+
 body.dark #note-search {
   background-color: #333;
   border-color: #666;
 }
-#note-search {
-  border: 0.1rem solid #CCC;
-}
+
 body.dark #expand-menu {
   color: #DDD;
 }
+
 body.dark .sidebar-container {
     box-shadow: 0 -1px 2px rgba(20, 20, 20, 0.70);
+}
+
+body.dark a,
+body.dark a:link,
+body.dark a:visited {
+    color: #6666ff;
+}
+
+body.dark a:active {
+    color: #ff6666;
 }
 
 body.dark.full-height .note, body.dark.full-height .main-container form {
@@ -758,22 +804,39 @@ body.dark.full-height .main-container textarea {
 body.dark.full-height .main-container textarea:focus {
     color: #DDD;
 }
-body.dark .note-date, body.dark .note-author, body.dark .note-comments {
+
+body.dark .note-date,
+body.dark .note-author,
+body.dark .note-comments {
     color: rgba(255, 255, 255, 0.5);
 }
-body.dark .note-actions a, body.dark .note-actions a:link, body.dark .note-actions a:visited {
+
+body.dark .note-actions a,
+body.dark .note-actions a:link,
+body.dark .note-actions a:visited {
     color: rgba(255, 255, 255, 0.4);
 }
-body.dark .note-actions a:hover, body.dark .note-actions a:active {
+
+body.dark .note-actions a:hover,
+body.dark .note-actions a:active {
     color: rgba(255, 255, 255, 0.7);
 }
-body.dark.full-height .main-container input[type="submit"] {
-    background-color: #222;
-    color: #BBB;
+
+body.dark.full-height .main-container input[type="submit"],
+body.dark #note-delete-cancel {
+    background-color: #888;
+    color: #222;
 }
+
+body.dark #note-delete-proceed {
+    background-color: #b34242;
+    color: #DDD;
+}
+
 body.dark .note-actions a.note-delete:hover, body.dark .note-actions a.note-delete:active {
     color: rgba(255, 30, 30, 0.7);
 }
+
 body.dark .note:focus, body.dark.full-height .main-container form:focus {
     box-shadow: 0 0 12px rgba(120, 120, 120, 0.2);
 }
