deleted stray closing <a> tag on homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
 		<!-- Footer -->
         <footer id="footer">
             <div class="copyright">
-                &copy; Texas State University Software Engineering - Team Arctic 2016</a>.
+                &copy; Texas State University Software Engineering - Team Arctic 2016.
             </div>
         </footer>
 
